erDiagram
    CUSTOMERS {
        int customer_id PK
        string first_name
        string last_name
        string email UK
        string phone
    }

    PRODUCTS {
        int product_id PK
        string sku UK
        string product_name
        decimal price
        int stock_quantity
    }

    ORDERS {
        int order_id PK
        int customer_id FK
        datetime date
        string shipping_address
        string status
    }

    ORDER_LINES {
        int order_id FK
        int product_id FK
        int quantity
        decimal price_at_time_of_sale
    }

    CUSTOMERS ||--o{ ORDERS : places
    ORDERS ||--o{ ORDER_LINES : contains
    PRODUCTS ||--o{ ORDER_LINES : referenced_by 